--- a/Index.html
+++ b/Index.html
@@ -23,7 +23,7 @@
         <div class="text-area" contenteditable="true"></div>
         <div class="action-buttons">
             <button onclick="addText()">Add Text</button>
-            <button onclick="removeText()">Remove Text</button>
+            <button onclick="removeText()">Remove Text|</button>
         </div>
     </div>
 
